updates for social localization strings and ui mods YV-545

--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -16,9 +16,10 @@
 
   %p
     = f.hidden_field :color, class:"selected-color"
-    %label Highlight: (optional)
-    .color_picker_list{"data-current-color" => bookmark.color}
-      .color_picker
+    %label
+      = t("notes.form.highlight field")
+      .color_picker_list{"data-current-color" => bookmark.color}
+        .color_picker
 
   :ruby    
     raw_refs = bookmark.references
