--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -31,8 +31,7 @@
             %a{href: notes_user_path(current_auth.username)}
           %li.auth
             %a#header_profile_trigger{:href => '#'}
-              // text needs localized
-              More
+              =t("more")
 
             #header_profile_menu
               %span.arrow
