--- a/app/views/users/bookmarks.html.haml
+++ b/app/views/users/bookmarks.html.haml
@@ -8,7 +8,7 @@
   - unless labels.blank?
     .bookmarks-labels-wrap
       %h3.labels-heading
-        My Labels
+        = t("bookmarks.my labels")
 
       - unless labels.blank?
         %ul.bookmarks-labels
