--- a/app/views/widgets/_find_friends.html.haml
+++ b/app/views/widgets/_find_friends.html.haml
@@ -1,8 +1,9 @@
 .widget.widget-find-friends
   %h3.hd
-    Find Friends
+    = t("friendships.widget.find friends title")
+
   .bd
     - # Sidebar User Search
     %form.sb-user-search{action: search_path(category: :users), method: "GET"}
-      %input.sb-user-search-query{type: "text", name: "q", placeholder: "Search by name"}
-      %input.sb-user-search-submit{type: "submit", value: "Go"}
+      %input.sb-user-search-query{type: "text", name: "q", placeholder: t("friendships.widget.search by name")}
+      %input.sb-user-search-submit{type: "submit", value: t("friendships.widget.search button")}
