--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -32,7 +32,7 @@
       .subscription-title
         display: block
         float: left
-        width: 75%
+        width: 70%
 
       .subscription-privacy
         font-size: 12px
@@ -40,7 +40,8 @@
         position: absolute
         bottom: 0px
         right: 10px
-        width: 20%
+        width: 29%
+        text-align: right
         
         a
           color: #aaa
