--- a/app/views/layouts/settings.html.haml
+++ b/app/views/layouts/settings.html.haml
@@ -14,7 +14,8 @@
     %img.settings-header-avatar{src: current_user.user_avatar_url["px_128x128"]}
     %h1.settings-header-name
       = current_user.name
-    %a{href: user_path(current_user)} Go to Your Profile
+    %a{href: user_path(current_user)} 
+      = t('users.go to your profile')
 
   %article
     = render partial: "users/mobile_menu", locals: {selected: @setting_selected}
