Friends / Notifications menu updates, templating moved to /templates, i18n string handled properly, etc.

--- a/app/views/shared/_language_selector.html.haml
+++ b/app/views/shared/_language_selector.html.haml
@@ -1,3 +1,5 @@
+- # This relies on LanguageMenu js class (/assets/javascripts/menus/language.js)
+- # Once moving to a server endpoint for changing languages the above js should be deleted.
 - if available_locales.length > 1
   #languages
     %div
