--- a/app/views/shared/header/_friends.html.haml
+++ b/app/views/shared/header/_friends.html.haml
@@ -1,5 +1,5 @@
-- # handlebars templates are in /shared/js_templates
-%div.header-popover.friend-requests#requests-menu
+- # handlebars templates are in /assets/js/templates/menus
+%div.header-popover.friend-requests#requests-menu{"data-str-wants-friendship"=>t("friendships.user wants friendship partial"), "data-str-accept" => t("friendships.form.accept button"), "data-str-ignore" => t("friendships.form.ignore button"), "data-str-no-requests" => t("friendships.requests none"), "data-str-view-all" => t("friendships.requests view all"), "data-str-none"=>t("friendships.requests no new")}
   %span.arrow
   %h4
     = t("friendships.find friends title")
