--- a/app/views/shared/header/_notifications.html.haml
+++ b/app/views/shared/header/_notifications.html.haml
@@ -1,5 +1,5 @@
-- # handlebars templates are in /shared/js_templates
-%div.header-popover.notifications
+- # handlebars templates are in /assets/js/templates/menus
+%div.header-popover.notifications{"data-str-view-all"=>t("notifications.view all"), "data-str-none"=>t("notifications.no new")}
   %span.arrow
   %h4
     = t("notifications.title")
