--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -55,7 +55,7 @@
         .user_options
           %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
             =t("friendships.requests title")
-          = render partial: "shared/header/requests"
+          = render partial: "shared/header/friends"
 
           %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
             =t("notifications.title")
