add language keys i18n updates

--- a/app/views/pages/donate.html.haml
+++ b/app/views/pages/donate.html.haml
@@ -32,7 +32,7 @@
       %div.donate_amount
         %label{for: "amount"}= t('donate.amount')
         %span#field_currency_sign $
-        %input#field_amount{type:"text", name: "amount", value: "", class: "autofocus", placeholder: "Enter an amount"}
+        %input#field_amount{type:"text", name: "amount", value: "", class: "autofocus", placeholder: t("donate.enter amount")}
         %span
           %strong USD
 
